--- a/css/main.css
+++ b/css/main.css
@@ -60,10 +60,10 @@ span {
 }
 
 #sidebar {
-  min-width: 250px;
-  max-width: 250px;
-  background: #7386d5;
-  color: #fff;
+  min-width: 210px;
+  max-width: 210px;
+  background: white;
+  color: black;
   transition: all 0.3s;
 }
 
@@ -95,7 +95,7 @@ span {
 #sidebar.active ul li a i {
   margin-right: 0;
   display: block;
-  font-size: 1.8em;
+  font-size: 1em;
   margin-bottom: 5px;
 }
 
@@ -115,7 +115,7 @@ span {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #6d7fcc;
+  background: white;
 }
 
 #sidebar .sidebar-header strong {
@@ -125,16 +125,21 @@ span {
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+}
+#sidebar ul li{
+  border-bottom: #b9c8df solid 0.3px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 #sidebar ul li a {
   padding: 10px;
-  font-size: 1.1em;
+  font-size: 1em;
+  font-weight: 405;
   display: block;
 }
 #sidebar ul li a:hover {
-  color: #7386d5;
+  color: #6795FF;
   background: #fff;
 }
 #sidebar ul li a i {
@@ -143,8 +148,8 @@ span {
 
 #sidebar ul li.active > a,
 a[aria-expanded="true"] {
-  color: #fff;
-  background: #6d7fcc;
+  color: #6795FF;
+  background: white;
 }
 
 a[data-toggle="collapse"] {
@@ -199,6 +204,7 @@ a.article:hover {
 #content {
   min-height: 100vh;
   transition: all 0.3s;
+  background-color: #EDF1F7;
 }
 
 /* ---------------------------------------------------
@@ -260,10 +266,9 @@ a.article:hover {
   }
 }
 
-
 /* top navbar */
 
-#topNAV .btn-rounded1{
+#topNAV .btn-rounded1 {
   border-radius: 10px;
   background-color: white;
 }
