Pie chart & optimized PHP

--- a/css/charts.css
+++ b/css/charts.css
@@ -6,6 +6,8 @@
 #l2chart,
 #l3chart,
 #l4chart,
+#l5chart,
+#l6chart,
 #f1chart,
 #f2chart,
 #s1chart,
@@ -18,6 +20,8 @@
   #l2chart,
   #l3chart,
   #l4chart,
+  #l5chart,
+  #l6chart,
   #f1chart,
   #f2chart,
   #s1chart,
@@ -30,6 +34,8 @@
 #l2chart,
 #l3chart,
 #l4chart,
+#l5chart,
+#l6chart,
 #f1chart,
 #f2chart,
 #s1chart,
@@ -42,6 +48,8 @@
 #l2chart,
 #l3chart,
 #l4chart,
+#l5chart,
+#l6chart,
 #f1chart,
 #f2chart,
 #s1chart,
