--- a/css/login.css
+++ b/css/login.css
@@ -96,7 +96,9 @@ body {
   box-shadow: none;
 }
 
-
+.log .form-control{
+  box-shadow: none;
+}
 
 .addGreen, .addGreen:focus {
   box-shadow: none;
